--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["io-util"]}
-reqwest = { version = "0.11", features = ["json"]} # HTTP 客户端
+reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false } # HTTP 客户端
 anyhow = "1" # 错误处理
 futures = "0.3.17"
